# vulae-twitch-bot

./: Cargo.toml  LICENSE  README.md  config.toml  data.yaml  rustfmt.toml
other/: copy_script.sh
other/nvim/: README.md
other/nvim/lua/: vulae_twitch_bot.lua
src/: command.rs  config.rs  main.rs  twitch_event_handler.rs
src/commands/: mod.rs  neovim.rs  radio.rs  simple_reply.rs
